Add images to new image folder

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ li:hover {
 header {
     width: 100vw;
     height: 100vh;
-    background-image: url('./images/artdecobr.jpg');
+    background-image: url('./images/art_deco_glam.jpg');
     background-position: bottom;
     background-size: cover;
     display: flex;
