Add alternative header background image

--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ li:hover {
 header {
     width: 100vw;
     height: 100vh;
-    background-image: url('./images/art_deco_glam.jpg');
+    background-image: url('./f2d_images/art_deco_br_3.jpg');
     background-position: bottom;
     background-size: cover;
     display: flex;
