--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ body , html {
 }
 
 .logo {
+    display: flex;
+    width: 100%;
     border: 2px solid #fff;
     /*border-radius: 10px;*/
     border-bottom-left-radius: 20px;
@@ -49,6 +51,7 @@ body , html {
     justify-content: space-between;
     padding: 20px;
     color: whitesmoke;
+    background-color: #49497e;
 }
 
 .nav-links {
@@ -57,8 +60,9 @@ body , html {
     
 }
 
-.nav-links li {
+.nav-links li a {
     margin: 0 30px;
+    color: #fff;
 }
 li:hover {
     color: rgb(196, 134, 19);
@@ -72,7 +76,7 @@ li:hover {
 header {
     width: 100vw;
     height: 100vh;
-    background-image: url('./f2d_images/art_deco_br_3.jpg');
+    background-image: url('./f2d_images/art_deco_br_4.jpg');
     background-position: bottom;
     background-size: cover;
     display: flex;
@@ -86,7 +90,7 @@ header {
 
 }
 .header-content h2 {
-    font-size: 4vmin;
+    font-size: 6vmin;
 
 }
 
@@ -99,9 +103,9 @@ header {
     
 }
 .header-content h1 {
-    font-size: 7vmin;
+    font-size: 8vmin;
     margin-top: 50px;
-    margin-bottom: 30px;
+    margin-bottom: 90px;
 }
 .ctn {
     padding: 8px 15px;
@@ -175,7 +179,7 @@ p {
 .about {
    width: 100%;
    height: 100vh;
-   background-image: linear-gradient(rgba(0,0,0,05),rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('./images/1_Fun2dance_2nd_Anniversary.JPG'); 
+   background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('./f2d_images/2_Southampton_ Class.JPG'); 
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
@@ -255,6 +259,7 @@ p {
     }
     .navbar {
         padding: 0;
+        position: relative;
     }
     .logo {
         position: absolute;
@@ -279,6 +284,7 @@ p {
     .mobile-menu {
         margin-top: 0px;
         border-bottom-right-radius: 30%;
+       
         
     }
     .nav-links li {
