--- a/about.css
+++ b/about.css
@@ -13,8 +13,17 @@
 }
 .section {
     width: 100%;
-    min-height: 100vh;
+    min-height: 90vh;
     background-color: #ddd;
+    width: 100vw;
+    height: 100vh;
+    background-image: url('./f2d_images/art_deco_br_4.jpg');
+    background-position: bottom;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
     
 }
 .container  {
