change headings for lessons section

--- a/about.css
+++ b/about.css
@@ -18,6 +18,11 @@ ul {
     list-style: none;
    
 }
+.active {
+    color: goldenrod;
+    text-decoration: underline;
+    font-weight: bold;
+}
 .title h1 {
     margin-bottom: 10px;
 }
