--- a/lesson_cards.css
+++ b/lesson_cards.css
@@ -23,7 +23,7 @@
     
     }
     
-    .card {
+   /* .card {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -31,12 +31,12 @@
     text-align: center;
      width: 400px;
      background-color: grey;
-     padding-top: 5px;
+      padding-top: 5px; 
      border-radius: 8px;
      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
      overflow: hidden;
     
-    }
+    } */
     
     .card img {
      border: 0;
