--- a/style.css
+++ b/style.css
@@ -156,11 +156,11 @@ section {
   
 }
 
-/*img {
-    display: block;
-    max-width: 100%;
+img {
+   /* display: block;*/
+   /* max-width: 100%; */
     height: auto;
-  }*/
+  }
 
 .row .col {
     display: flex;
